--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
 	<title></title>
 	<link rel="manifest" href="./manifest.json">
 	<link rel="stylesheet" href="./main.css">
+	<script src="./js/init.js"></script>
 </head>
 <body>
-	
+	<div class="container largetext">
+		<div class="header"></div>
+		<div class="pre-content descr"></div>
+		<div class="centre"></div>
+		<div class="post-content descr"></div>
+		<div class="footer"></div>
+	</div>
 </body>
 </html>
