--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="manifest" href="./manifest.json">
 	<link rel="stylesheet" href="./main.css">
 	<script src="./js/question.js"></script>
+	<script src="./js/theQuestions.js"></script>
 	<script src="./js/init.js"></script>
 </head>
 <body>
