--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 	<title></title>
 	<link rel="manifest" href="./manifest.json">
 	<link rel="stylesheet" href="./main.css">
+	<script src="./js/helpers.js"></script>
 	<script src="./js/question.js"></script>
 	<script src="./js/theQuestions.js"></script>
-	<script src="./js/init.js"></script>
+	<script src="./js/startPage.js"></script>
 </head>
 <body>
 	<!--
