--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<script src="./js/question.js"></script>
 	<script src="./js/theQuestions.js"></script>
 	<script src="./js/startPage.js"></script>
+	<script src="./js/run.js"></script>
 	<script src="./js/init.js"></script>
 </head>
 <body>
