--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 	<script src="./js/helpers.js"></script>
 	<script src="./js/question.js"></script>
 	<script src="./js/theQuestions.js"></script>
-	<script src="./js/startPage.js"></script>
 	<script src="./js/questionnaire.js"></script>
+	<script src="./js/startPage.js"></script>
+	<script src="./js/finishPage.js"></script>
 	<script src="./js/run.js"></script>
 	<script src="./js/init.js"></script>
 </head>
