--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 	<script src="./js/theQuestions.js"></script>
 	<script src="./js/questionnaire.js"></script>
 	<script src="./js/startPage.js"></script>
-	<script src="./js/finishPage.js"></script>
+	<script src="./js/download.js"></script>
 	<script src="./js/run.js"></script>
-	<script src="./js/init.js"></script>
+	<script src="./js/main.js"></script>
 </head>
 <body>
 	<!--
