--- a/index.html
+++ b/index.html
@@ -6,12 +6,8 @@
 	<link rel="manifest" href="./manifest.json">
 	<link rel="stylesheet" href="./main.css">
 	<script src="./js/helpers.js"></script>
-	<script src="./js/question.js"></script>
+	<script src="./js/base.js"></script>
 	<script src="./js/theQuestions.js"></script>
-	<script src="./js/questionnaire.js"></script>
-	<script src="./js/startPage.js"></script>
-	<script src="./js/download.js"></script>
-	<script src="./js/run.js"></script>
 	<script src="./js/main.js"></script>
 </head>
 <body>
