this might be handling the modules but

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=BIZ+UDGothic&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./main.css">
-	<script src="./js/helpers.js"></script>
-	<script src="./js/base.js"></script>
-	<script src="./js/theQuestions.js"></script>
-	<script src="./js/main.js"></script>
+	<script type='module' src="./js/helpers.js"></script>
+	<script type='module' src="./js/base.js"></script>
+	<script type='module' src="./js/theQuestions.js"></script>
+	<script type='module' src="./js/main.js"></script>
 </head>
 <body>
 	<!--
